<resources>
    <string-array name="tanggal_logbook">
        <item>6 September 2022</item>
        <item>7 September 2022</item>
        <item>8 September 2022</item>
        <item>9 September 2022</item>
        <item>10 September 2022</item>
        <item>11 September 2022</item>
        <item>12 September 2022</item>
    </string-array>
    <string-array name="catatan_logbook">
        <item>Analisa terkait nagari tanah datar</item>
        <item>Melakukan perancangan sesuai kebutuhan</item>
        <item>Melanjutkan perangcanban</item>
        <item>Melanjutkan perangcanban</item>
        <item>Melanjutkan perangcanban</item>
        <item>Melanjutkan perangcanban</item>
        <item>Melanjutkan perangcanban</item>
    </string-array>
    <string-array name="nama_peserta">
        <item>: Rizki Juni Darmawan</item>
        <item>: Sekar Rayhanisa</item>
        <item>: Taufik Hidayat</item>
        <item>: Rizki Juni Darmawan</item>
        <item>: Sekar Rayhanisa</item>
        <item>: Taufik Hidayat</item>
        <item>: Rizki Juni Darmawan</item>
        <item>: Sekar Rayhanisa</item>
        <item>: Taufik Hidayat</item>
    </string-array>
    <string-array name="nim_peserta">
        <item>: 2011527002</item>
        <item>: 2011521016</item>
        <item>: 2011521001</item>
        <item>: 2011527002</item>
        <item>: 2011521016</item>
        <item>: 2011521001</item>
        <item>: 2011527002</item>
        <item>: 2011521016</item>
        <item>: 2011521001</item>
    </string-array>
    <integer-array name="foto_peserta">
        <item>@drawable/ic_baseline_person_24</item>
        <item>@drawable/ic_baseline_person_24</item>
        <item>@drawable/ic_baseline_person_24</item>
        <item>@drawable/ic_baseline_person_24</item>
        <item>@drawable/ic_baseline_person_24</item>
        <item>@drawable/ic_baseline_person_24</item>
        <item>@drawable/ic_baseline_person_24</item>
        <item>@drawable/ic_baseline_person_24</item>
        <item>@drawable/ic_baseline_person_24</item>
    </integer-array>


    <string name="app_name">PTB_10_A</string>
    <string name="sistem_informasi_pengelolaan_tugas_akhir_mahasiswa_unand">SISTEM INFORMASI PENGELOLAAN TUGAS AKHIR MAHASISWA UNAND</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_nim">Masukkan NIM</string>
    <string name="logo">logo</string>
    <string name="nim">NIM</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masukkan_sandi">Masukkan Sandi</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi ?</string>
    <string name="login">Masuk</string>
    <string name="logbook">Logbook</string>
    <string name="tambah">Tambah</string>
    <string name="logbook2">Logbook</string>
    <string name="daftar_ta">Daftar TA</string>
    <string name="jadwal_seminar_dan_sidang">Jadwal Seminar dan Sidang</string>
    <string name="list_logbook">List Logbook</string>
    <string name="ubah">Ubah</string>
    <string name="masukkan_catatan">Masukkan Catatan</string>
    <string name="catatan">Catatan</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="tanggal">Tanggal</string>
    <string name="edit_logbook">Edit Logbook</string>
    <string name="tambah_logbook">Tambah Logbook</string>
    <string name="tanggalLB">Tanggal</string>
    <string name="pilih_tanggalLB">Pilih Tanggal</string>
    <string name="catatanAdd">Catatan</string>
    <string name="tambahLB">Tambah</string>
    <string name="masukkan_catatanLB">Masukkan Catatan</string>
    <string name="formDaftarTA">Daftar TA</string>
    <string name="namaDaftarTA">Nama</string>
    <string name="masukkan_namaTA">Masukkan Nama</string>
    <string name="nimTA">NIM</string>
    <string name="masukkan_nimTA">Masukkan NIM</string>
    <string name="dosen_pembimbingTA">Dosen Pembimbing</string>
    <string name="masukkan_dosen_pembimbingTA">Masukkan Dosen Pembimbing</string>
    <string name="judul_ta">Judul TA</string>
    <string name="masukkan_judul_ta">Masukkan Judul TA</string>
    <string name="daftar_formTA">Daftar TA</string>
    <string name="namaprofil">NamaProfil</string>
    <string name="nim2">NIM</string>
    <string name="judul_ta2">Judul TA</string>
    <string name="todo">TODO</string>
    <string name="ajukan_sidang">Ajukan Sidang</string>
    <string name="jam">Jam</string>
    <string name="jadwal">Jadwal</string>
    <string name="ruangan">Ruangan</string>
    <string name="waktu">Waktu</string>
    <string name="pilih_jadwal">--Pilih jadwal--</string>
    <string name="ruangan2">Ruangan</string>
    <string name="judul_ta3">Judul TA</string>
    <string name="nim3">NIM</string>
    <string name="nama2">Nama</string>
    <string name="pengajuan_sidang">Pengajuan Sidang</string>
    <string name="nama_dosen">Nama Dosen</string>
    <string name="profil">Profil</string>
    <string name="todo2">TODO</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="_082311303597">082311303597</string>
    <string name="jl_kasturi_1_no_31a">Jl. Kasturi 1 No.31A</string>
    <string name="perempuan">Perempuan</string>
    <string name="s1_sistem_informasi">S1 - Sistem Informasi</string>
    <string name="sekar_rayhannisa">Sekar Rayhannisa</string>
    <string name="no_hp">No.hp</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="program_studi">Program Studi</string>
    <string name="nim4">NIM</string>
    <string name="sekar_rayhannisa2">Sekar Rayhannisa</string>
    <string name="ubah_profil2">Ubah Profil</string>
    <string name="todo3">TODO</string>
    <string name="ubah_profil3">Ubah Profil</string>
    <string name="_082311303597_">082311303597</string>
    <string name="jl_kasturi_1_no_31a_">JL. Kasturi 1 No.31A</string>
    <string name="no_hp2">No. hp</string>
    <string name="alamat2">Alamat</string>
    <string name="ubah_profil4">Ubah Profil</string>
    <string name="perempuan2">Perempuan</string>
    <string name="s1_sistem_informasi2">S1 - Sistem Informasi</string>
    <string name="_2011521022_">2011521022</string>
    <string name="sekar_rayhannisa3">Sekar Rayhannisa</string>
    <string name="program_studi2">Program Studi</string>
    <string name="jenis_kelamin2">Jenis Kelamin</string>
    <string name="nim5">NIM</string>
    <string name="nama4">Nama</string>
    <string name="todo4">TODO</string>
    <string name="ubah_password2">Ubah Password</string>
    <string name="saya_yakin_data_password_baru_yang_dimasukkan_sudah_benar">Saya yakin data password baru yang dimasukkan sudah benar.</string>
    <string name="masukkan_password_baru">Masukkan password baru</string>
    <string name="masukkan_password_baru2">Masukkan password baru</string>
    <string name="masukkan_password_lama">Masukkan password lama</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="password_baru">Password Baru</string>
    <string name="password_lama">Password Lama</string>
    <string name="ubah_password3">Ubah Password</string>

    <string name="seminar_hasil">Seminar Hasil</string>
    <string name="seminar_hasilhome">Seminar Hasil</string>
    <string name="ajukanTA">Ajukan</string>
    <string name="pengajuan_semhas">Pengajuan Semhas</string>
    <string name="nama">Nama</string>
    <string name="nim_mahasiswaTA">NIM</string>
    <string name="dosen_pembimbing">Dosen Pembimbing</string>
    <string name="masukkan_judul_ta_anda">Masukkan Judul TA</string>
    <string name="judul_ta_anda">Judul TA</string>
    <string name="masukkan_dosen_pembimbing">Masukkan Dosen Pembimbing</string>
    <string name="tanggal_">Tanggal</string>
    <string name="masukkan_tanggal">Masukkan Tanggal</string>
    <string name="masukkan_jam">Masukkan Jam</string>
    <string name="laporan_tugas_akhir">Laporan Tugas Akhir</string>
    <string name="nama_anda">Nama</string>
    <string name="nim_anda">NIM</string>
    <string name="detail_semhas">Detail Semhas</string>
    <string name="seminar_hasil_anda">Seminar Hasil</string>
    <string name="tambah_peserta">Tambah Peserta</string>
    <string name="proggers_semhas">Proggers Semhas</string>
    <string name="nim_kamu">NIM</string>
    <string name="tambah_peserta_">Tambah Peserta</string>
    <string name="tambah_peserta_anda">Tambah Peserta</string>
    <string name="masukkan_nim_anda">Masukkan NIM</string>
    <string name="nama_kamu">Nama</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="tambah_peserta_seminar">Tambah Peserta</string>
    <string name="daftar_peserta_semhas">Daftar Peserta Semhas</string>
    <string name="proggres_semhas">Proggres Semhas</string>
    <string name="progress">Progress</string>
    <string name="jadwal_seminardansidang">Jadwal Seminar dan Sidang</string>
    <string name="jadwal_sidang">Jadwal Sidang</string>
    <string name="edit">Edit</string>
    <string name="list_logbook_anda">List LogBook</string>
    <string name="jadwal_seminar">Jadwal Seminar</string>
    <string name="edit2">Edit</string>
    <string name="tanggal_anda">Tanggal</string>
    <string name="edit_list">Edit</string>
    <string name="edit_list2">Edit</string>
    <string name="tanggal_1">Tanggal</string>
    <string name="tanggal_2">Tanggal</string>
    <string name="jadwal_sidang_anda">Jadwal Sidang</string>
    <string name="_5_septem_2022">5 Septem 2022</string>
    <string name="melakukan_perancangan_di_nagari_selatan_surau_ateh">Melakukan perancangan di nagari selatan surau ateh</string>
    <string name="ajukanSemhas">Ajukan</string>
    <string name="sidang_ta">Sidang TA</string>
    <string name="e_mail">E-mail</string>
</resources>